fix gap between sidebar and home content

--- a/src/views/Home/Home.style.scss
+++ b/src/views/Home/Home.style.scss
@@ -1,6 +1,6 @@
 .home_layout {
   display: grid;
-  grid-template: 50px 5fr / 1fr 20fr;
+  grid-template: 50px 5fr / 100px 20fr;
   grid-template-areas:
     'sidebar content'
     'sidebar content';
